WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111468
[BlackBerry] Fix assertion in CookieManager::getBackingStoreCookies
https://bugs.webkit.org/show_bug.cgi?id=111468
Summary
[BlackBerry] Fix assertion in CookieManager::getBackingStoreCookies
otcheung
Reported
2013-03-05 12:43:52 PST
Assertion is getting false positives.
Attachments
Patch
(2.00 KB, patch)
2013-03-05 12:47 PST
,
otcheung
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
otcheung
Comment 1
2013-03-05 12:47:47 PST
Created
attachment 191541
[details]
Patch
Rob Buis
Comment 2
2013-03-05 12:49:32 PST
Comment on
attachment 191541
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2013-03-05 13:10:30 PST
Comment on
attachment 191541
[details]
Patch Clearing flags on attachment: 191541 Committed
r144804
: <
http://trac.webkit.org/changeset/144804
>
WebKit Review Bot
Comment 4
2013-03-05 13:10:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug