[BlackBerry] Fix assertion in CookieManager::getBackingStoreCookies https://bugs.webkit.org/show_bug.cgi?id=111468

Patch by Otto Derek Cheung <otcheung@rim.com> on 2013-03-05
Reviewed by Rob Buis.
Internally reviewed by Konrad Piascik.

The assert in getBackingStoreCookies could be giving out false positives now
that we have our fixes for cookie loading in PR 286189. The cookie store could
be half loaded if the first cookie get/set call happens before the db is fully loaded.
A full webkit sync call to reload the database will cause the assert to be hit.

Safer to flush everything out and try again.

* platform/blackberry/CookieManager.cpp:
(WebCore::CookieManager::getBackingStoreCookies):

Canonical link: https://commits.webkit.org/129829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144804 268f45cc-cd09-0410-ab3c-d52691b4dbfc